Removido o Lovable do projeto

--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FinanceIA - Gestão Financeira Inteligente</title>
-    <meta name="description" content="Aplicativo completo de gestão financeira pessoal com IA - controle de gastos, investimentos e planejamento" />
-    <meta name="author" content="FinanceIA" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>FinanceIA - Gestão Financeira Inteligente</title>
+        <meta
+            name="description"
+            content="Aplicativo completo de gestão financeira pessoal com IA - controle de gastos, investimentos e planejamento"
+        />
+        <meta name="author" content="FinanceIA" />
 
-    <meta property="og:title" content="FinanceIA - Gestão Financeira Inteligente" />
-    <meta property="og:description" content="Aplicativo completo de gestão financeira pessoal com IA - controle de gastos, investimentos e planejamento" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+        <meta property="og:title" content="FinanceIA - Gestão Financeira Inteligente" />
+        <meta
+            property="og:description"
+            content="Aplicativo completo de gestão financeira pessoal com IA - controle de gastos, investimentos e planejamento"
+        />
+        <meta property="og:type" content="website" />
+    </head>
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
-
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
